--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@ body { margin: 0; }
 }
 
 .p1 {
-    font-family: cursive;
+    font-family: 'Sans-serif', Helvetica;
     color: #ffffff;   
     font-size: 12px;
 }
